--- a/Python ORF Finder/Changelog.txt
+++ b/Python ORF Finder/Changelog.txt
@@ -15,3 +15,7 @@ In versie 0.31
 In versie 0.32
 --------------------------------------------------------------------------------------------
 1. Justin heeft ervoor gezorgd dat er meerdere Reading Frames zijn.
+
+In versie 0.33
+--------------------------------------------------------------------------------------------
+1. Justin heeft alle Reading Frames in een plaatje gekregen.
