--- a/Python ORF Finder/Changelog.txt
+++ b/Python ORF Finder/Changelog.txt
@@ -38,3 +38,5 @@ In versie 0.40
 
 
 
+
+--------------------------------------------------------------------------------------------1. Local Blast toegevoegd in versie 0.41
