Versie 0.42 (Pre-Alpha)

--- a/Python ORF Finder/Changelog.txt
+++ b/Python ORF Finder/Changelog.txt
@@ -38,5 +38,6 @@ In versie 0.40
 
 
 
-
---------------------------------------------------------------------------------------------1. Local Blast toegevoegd in versie 0.41
+ In versie 0.41
+-------------------------------------------------------------------------------------------- 
+1. Local Blast toegevoegd
