--- a/Python ORF Finder/Changelog.txt
+++ b/Python ORF Finder/Changelog.txt
@@ -40,4 +40,12 @@ In versie 0.40
 
  In versie 0.41
 -------------------------------------------------------------------------------------------- 
-1. Local Blast toegevoegd
+1. Local Blast toegevoegd door Luuk
+
+In versie 0.42
+-------------------------------------------------------------------------------------------- 
+1. Kleine aanpassingen van Justin
+
+In versie 0.43
+-------------------------------------------------------------------------------------------- 
+1. Een manier toegevoegd om op een index een header te kiezen in een Fasta bestand en daar de DNA van te verwerken. Die index valt te kiezen in de master (het hoofdmenu)
