Versie 0.46 (Pre-Alpha)

--- a/Python ORF Finder/Changelog.txt
+++ b/Python ORF Finder/Changelog.txt
@@ -48,10 +48,18 @@ In versie 0.42
 
 In versie 0.43
 -------------------------------------------------------------------------------------------- 
-1. Een manier toegevoegd om op een index een header te kiezen in een Fasta bestand en daar de DNA van te verwerken. Die index valt te kiezen in de master (het hoofdmenu)
+1. Justin: Een manier toegevoegd om op een index een header te kiezen in een Fasta bestand en daar de DNA van te verwerken. Die index valt te kiezen in de master (het hoofdmenu)
+In versie 0.44
 -------------------------------------------------------------------------------------------
 1. Fasta wordt auto aangemaakt en batch file is geupdate door Luuk
-versie 0.44
+
+In versie 0.45
 --------------------------------------------------------------------
-1. sh file voor linux aangemaakt om local te blasten
-versie 0.45
+1. sh file voor linux aangemaakt om local te blasten (Luuk)
+
+In versie 0.46
+--------------------------------------------------------------------
+1. Kleine aanpassingen door Justin
+
+
+
