--- a/Python ORF Finder/Changelog.txt
+++ b/Python ORF Finder/Changelog.txt
@@ -75,6 +75,10 @@ In versie 0.48
 1. Teun heeft BLASTING.py geupdate
 2. Teun heeft Database.py een query functie gegeven
 
---------------------------------------------------------------------1. batch en sh file naar xml output gemaakt/evalue cutoff weg gehaald 
+--------------------------------------------------------------------1. batch en sh file naar xml output gemaakt/evalue cutoff weg gehaald (Luuk)
 2. naar fasta schrijven frame en position toegevoegd door Luuk
-dsfsdsfewgewtewtehrwerqwet
+
+In versie 0.50
+--------------------------------------------------------------------1. Een hulpmenu is toegevoegd (Justin)
+2. Kleine aanpassingen gedaan (Justin)
+
