--- a/Python_ORF_Finder/Changelog.txt
+++ b/Python_ORF_Finder/Changelog.txt
@@ -105,4 +105,4 @@ In versie 0.53
 --------------------------------------------------------------------
 1. BLASTING.py geupdated en geeft nu SQL om de database te vullen door Teun
 
---------------------------------------1. batch gefixed 0.54
+--------------------------------------1. batch gefixed 0.54-------------------------1. SQL Inserts toevoegen door Luuk 0.55
